# clawparty

./: .gitignore  .gitmodules  AGENTS.md  README.md  README.zh.md  build.cmd  build.sh  package-lock.json
.github/workflows/: android-build.yml  angroid-build2.yml  linux-arm64-binary.yml  linux-x86-binary.yml  macos-m1-binary.yml  macos-x86-binary.yml  release.yml  windows-x86-binary.yml
agent/: api.js  db.js  main.js  mesh.js  templates.js  version.json
agent/filters/: blocked-keywords.js  credit-delay.js  repeat-message.js  suppress-json.js
chat-gui/: .gitignore  README.md  clawparty.keystore  index.html  package-lock.json  package.json  vite.config.js
chat-gui/src/: App.vue
chat-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
chat-gui/src-tauri/capabilities/: main.json  windows.json
chat-gui/src-tauri/src/: lib.rs  main.rs
cli/: client.js  main.js  trial.js
docs/: Agent-API.md  CLI-OVERVIEW.md  CLI.md  CLI_zh.md  DESIGN-PAYMENT.md  DESIGN-ZTM-FILESYSTEM.md  HOWTO-CHAT.md  HOWTO-CLOUD.md  HOWTO-PAYMENT.md  HOWTO-PROXY.md  HOWTO-TUNNEL.md  HOWTO-USER.md  HOWTO_TUI.md  README.md  TEST-CHAT.md  TEST-CLOUD.md  TEST-PAYMENT.md  TEST-PROXY.md  TEST-TUNNEL.md  TEST-USER.md  chat-filter-chain-design.md  cli-examples.md  user-readme.md
hub/: db.js  main.js
pipy/: CMakeLists.txt
tests/: README.md  cleanup.sh  prepare.sh  run-tests.sh
tests/api/: 016-test-reg-enable.sh  017-test-reg-success.sh  018-test-reg-missing-username.sh  022-test-user-status.sh  (+23 more)
tui/: Cargo.toml  index.js  package.json
ztm-work/: ztm.db
(+121 files in other folders)
