[package]
name = "clawparty"
version = "0.1.0"
description = "ClawParty"
authors = ["lindc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clawparty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-share = "2"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2"
libloading = "=0.8.5"
j4rs = "0.20.0"
log = "0.4"
rsa = "0.9.6"
rand = "0.8"
rust-argon2 = "2.1.0"
deranged = "=0.4.0"

